Changes in @NEW@:
  o Internal Changes:
    * Repository internal getfile function now avoids and database access
      when no files have been requested

Changes in 2.0.46:
  o New Features
    * If python-keyutils is available, cvc will try to interact with
      the user's session keyring. (CNY-3190)
    * Conary now uses xz in preference to unlzma to decompress lzma
      data. (CNY-3194)
    * A new function, parseChangeSpec, that parses a single trove
      update specification such as name=ver1[flv1]--ver2[flv2], was
      added to cmdline.py. (CNY-3197)

  o Internal Changes:
    * The code path leading to getChangeSet was reworked to use
      significantly fewer repository calls, resulting in a massive
      speedup for uncached, large requests.

  o Bug Fixes:
    * PGP passphrases, required for signing troves, are now fetched
      using a callback. (CNY-3189)
    * Repositories running on postgresql can properly handle queries
      for labels sharing the hostname portion. (CNY-3192)
    * The sha1 for files in a repository could be improperly left as
      NULL for some cases involving shadows. This has been fixed,
      and migrating existing repositories to version 17.3 will fix
      existing missing sha1 checksums.
    * Group pre-execution scripts now run exactly before any package
      that is part of the group. Previously, pre-execution scripts
      were run at the very beginning of the update, where the
      probability of their interpreter not being installed was high,
      especially for pre-install scripts. (CNY-2705)
    * Group pre-execution scripts no longer unnecessarily fetch
      information they already have from the repository. (CNY-3196)
    * Password information for XMLRPC server URLs is now hidden in
      tracebacks. (CNY-3198)

Changes in 2.0.45:
  o New Features:
    * The standalone Conary repository server now prints a message if
      it fails to import the Conary REST api.